--- a/about.html
+++ b/about.html
@@ -12,5 +12,5 @@ Learning way to get my own page.
 <p>
 Try to be a nice coder.
 
-Programmer must be self-confident and curious about many issue.
+Programmer must be self-confident and curious about many issues.
 </p>
